# simple-avro-example

./: CMakeLists.txt  README.md  generic.cc  generic_multiple.cc  generic_test.cc  quickstart.cc  schema.avro  schema.avsc  vcpkg.json
